# stdash

./: Dockerfile  README.md  pyproject.toml  requirements.txt
note/: study.ipynb
src/stdash/: app.py  data.py  home.py  step_1.py
src/stdash/pages/: step_1.py  step_2.py  step_3.py  step_4.py
