[project]
name = "stdash"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "S00zzang", email = "sujinpark8719561@gmail.com"},
]
dependencies = [
    "streamlit>=1.38.0",
    "matplotlib>=3.9.2",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "python-multipart>=0.0.12",
    "transformers>=4.45.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "vega-datasets>=0.9.0",
]
